k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: system-monitor
  namespace: apps
  labels:
    app: system-monitor
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: system-monitor
